# open_spiel

./: README.md
open_spiel/: spiel.h  spiel_bots.cc
open_spiel/examples/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mtg.cc
open_spiel/examples/abseil-cpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/abseil-cpp/absl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/algorithms/alpha_zero_torch/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/algorithms/dqn_torch/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/bots/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/bots/gin_rummy/: CTestTestfile.cmake  Makefile  (+1 more)
open_spiel/examples/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/game_transforms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/games/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/examples/utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
open_spiel/games/: CMakeLists.txt
open_spiel/games/magic_the_gathering/: CMakeLists.txt  magic_the_gathering.cc  magic_the_gathering.h  magic_the_gathering_test.cc
open_spiel/python/tests/: pyspiel_test.py
(+69 files in other folders)
